--- a/server.cfg
+++ b/server.cfg
@@ -117,4 +117,4 @@ set sv_idleExit "5"
 // The server will run serverstartup when it finishes initializing, so start a random map from the map pool.
 set serverstartup "startRandomMap"
 // Or, start a map of your choosing (factory is required)
-set serverstartup "map campgrounds hoq_ca"
+// set serverstartup "map campgrounds hoq_ca"
