--- a/server.cfg
+++ b/server.cfg
@@ -7,7 +7,7 @@
 //minqlxstuff
 
 set qlx_owner "76561198000441936"
-set qlx_plugins "balance, plugin_manager, essentials, motd, permission, ban, silence, clan, names, log, workshop, mybalance, queue, player_info"
+set qlx_plugins "balance, plugin_manager, essentials, motd, permission, ban, silence, clan, names, log, workshop"
 set qlx_defaultMapToChangeTo "campgrounds"
 set qlx_elo_limit_min "1500"
 set qlx_elo_limit_max "9999"
